# Prusa-CW-Firmware

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Doxyfile  Makefile  Prusa-CW-Firmware.hex.in  README.md  build.sh  set_fuses.sh
Prusa-CW-Firmware/: Countimer.cpp  LiquidCrystal_Prusa.cpp  LiquidCrystal_Prusa.h  MCP23S17.cpp  Main.h  MenuList.cpp  MenuList.h  PrusaLcd.h  Selftest.cpp  Selftest.h  SpeedControl.cpp  SpeedControl.h  Trinamic_TMC2130.cpp  Trinamic_TMC2130.h  config.h  curwa_FWupdate_v0_8.ino  main.cpp  pins_board_4.h  thermistor.cpp  version.h.in
Prusa-CW-Firmware/src/: thermistortable_5.h
board/: pins_arduino.h
core/: Arduino.h  Print.h
devices/: cw1.cpp  cw1.h  cw1s.cpp  cw1s.h
i18n/: cs.po  de.po  en.h  es.po  fr.po  i18n.h  it.po  pl.po
lib/: CDC.cpp  Countimer.cpp  Countimer.h  MCP23S17.cpp  Print.cpp  Print.h  Trinamic_TMC2130.cpp  USBAPI.h  USBCore.cpp  USBDesc.h  intpol.c  intpol.h  main.cpp
libraries/: EEPROM.h
src/: Countimer.cpp  Countimer.h  LiquidCrystal_Prusa.cpp  LiquidCrystal_Prusa.h  MenuList.cpp  MenuList.h  Selftest.cpp  Selftest.h  SpeedControl.cpp  SpeedControl.h  config.cpp  config.h  defines.h  device.h  hardware.cpp  hardware.h  i18n.h  main.cpp  main.h  pins_board_3.h  pins_board_4.h  simple_print.cpp  simple_print.h  states.cpp  states.h  states_items.cpp  states_items.h  thermistor.cpp  thermistor.h  ui.cpp  ui.h  ui_items.cpp  ui_items.h  wrappers.cpp  wrappers.h
src/ttables/: Configuration.h
